refactor: update tooltip bindings in column editor drawer
- Replaced 'tooltip' property with 'help' in referential actions for improved clarity.
- Adjusted the template to reflect the change in property name for displaying help information in the column editor drawer.

--- a/client/src/app/features/base/table/components/column-editor/column-editor-drawer.component.html
+++ b/client/src/app/features/base/table/components/column-editor/column-editor-drawer.component.html
@@ -305,11 +305,7 @@
                     <ng-template #item let-item>
                       <p class="text-xs flex items-center gap-1">
                         <span>{{ item.name }}</span>
-                        <i
-                          class="icon icon-info"
-                          [pTooltip]="item.tooltip"
-                          tooltipPosition="top"
-                        ></i>
+                        <i class="icon icon-info" [pTooltip]="item.help" tooltipPosition="top"></i>
                       </p>
                     </ng-template>
                   </p-selectbutton>
