--- a/client/src/app/shared/spreadsheet/spreadsheet.component.html
+++ b/client/src/app/shared/spreadsheet/spreadsheet.component.html
@@ -637,6 +637,7 @@
                         tableService.layout.cell.selection.anchor.rowIndex === rowIndex &&
                         tableService.layout.cell.selection.anchor.columnIndex === columnIndex
                       "
+                      (viewDetail)="tableService.viewReferenceDetail($event)"
                     ></ng-template>
                   </div>
                 }
@@ -864,6 +865,7 @@
                         tableService.layout.cell.selection.anchor.rowIndex === rowIndex &&
                         tableService.layout.cell.selection.anchor.columnIndex === columnIndex
                       "
+                      (viewDetail)="tableService.viewReferenceDetail($event)"
                     ></ng-template>
                   </div>
                 }
