--- a/client/src/app/shared/spreadsheet/components/field-cell/reference/cell.component.html
+++ b/client/src/app/shared/spreadsheet/components/field-cell/reference/cell.component.html
@@ -11,7 +11,11 @@
   </div>
   @if (selecting) {
     @if (!readonly) {
-      <reference-picker-drawer [(visible)]="visibleReferencePicker" [field]="field" />
+      <reference-picker-drawer
+        [(visible)]="visibleReferencePicker"
+        [field]="field"
+        [value]="data"
+      />
     }
     <div
       class="hover:bg-surface-50 text-surface-500 cursor-pointer w-5 h-5 rounded-md flex items-center justify-center"
