feat: add reference field editor to record editor drawer
- Integrated ReferenceFieldEditorComponent into the record editor drawer for handling reference data types.
- Updated the HTML template to conditionally render the reference field editor based on the data type, enhancing data entry capabilities.

--- a/client/src/app/features/base/table/components/column-editor/column-editor-drawer.component.html
+++ b/client/src/app/features/base/table/components/column-editor/column-editor-drawer.component.html
@@ -443,6 +443,9 @@
                   class="col-span-2"
                 />
               }
+              @case (DataType.Reference) {
+                Not support
+              }
               @default {
                 <i class="text-sm text-surface-500">Select a data type first.</i>
               }
