--- a/client/src/app/features/base/table/components/record-editor/record-editor-drawer.component.html
+++ b/client/src/app/features/base/table/components/record-editor/record-editor-drawer.component.html
@@ -136,7 +136,15 @@
             class="col-span-2"
           />
         }
-        @case (DataType.Reference) {}
+        @case (DataType.Reference) {
+          <reference-field-editor
+            [field]="field"
+            [(data)]="updatedRecord[field.name]"
+            [viewOnly]="viewOnly() || field.params.primary"
+            [label]="false"
+            class="col-span-2"
+          />
+        }
       }
     }
   </div>
