feat: enhance reference handling and data retrieval in components
- Updated DrawerComponent to support nullable values and improved type handling for emitted events.
- Enhanced TableDetailComponent to utilize reference values for data retrieval, improving data integrity.
- Refactored ReferenceFieldEditorComponent and ReferencePickerDrawerComponent to manage reference data more effectively, including display label parsing and event handling.
- Improved field cell components to reflect changes in reference data and ensure proper data binding.
- Adjusted REST API to return expanded fields in JSON format, enhancing data retrieval capabilities.

--- a/client/src/app/shared/field-system/editors/reference/editor.component.html
+++ b/client/src/app/shared/field-system/editors/reference/editor.component.html
@@ -20,7 +20,8 @@
     <reference-picker-drawer
       [(visible)]="visibleReferencePicker"
       [field]="field()"
-      [(value)]="data"
+      [value]="value"
+      (onSave)="onPick($event)"
     />
   }
   <p-iconfield>
@@ -33,8 +34,11 @@
       [placeholder]="placeholder() ?? 'Input here...'"
       [pAutoFocus]="autoFocus()"
       [readonly]="viewOnly()"
-      [(ngModel)]="data"
+      [ngModel]="isFocused ? value : displayLabel"
+      (ngModelChange)="onInputValue($event)"
       fluid
+      (focus)="isFocused = true"
+      (blur)="isFocused = false"
     />
     <p-inputicon class="icon icon-chevron-down" (click)="visibleReferencePicker = true" />
   </p-iconfield>
