--- a/client/src/app/features/base/table/pages/table-detail/table-detail.component.html
+++ b/client/src/app/features/base/table/pages/table-detail/table-detail.component.html
@@ -15,26 +15,28 @@
     [mode]="updatedRecordMode"
     (onSave)="onRecordSave($event)"
   />
-  <spreadsheet
-    [config]="config()"
-    [columns]="columns()"
-    [rows]="rows()"
-    (action)="onTableAction($event)"
-    (columnAction)="onColumnAction($event)"
-    (rowAction)="onRowAction($event)"
-    (cellAction)="onCellAction($event)"
-  >
-    <ng-template #toolbar>
-      <div class="flex">
-        <p-splitbutton
-          label="Insert"
-          icon="icon icon-plus"
-          class="w-30 h-9.3"
-          [model]="insertMenuItems"
-          (onClick)="addNewRecord()"
-        />
-        <p-divider layout="vertical" class="before:h-7! before:mt-1" />
-      </div>
-    </ng-template>
-  </spreadsheet>
+  @if (isReady()) {
+    <spreadsheet
+      [config]="config()"
+      [columns]="columns()"
+      [rows]="rows()"
+      (action)="onTableAction($event)"
+      (columnAction)="onColumnAction($event)"
+      (rowAction)="onRowAction($event)"
+      (cellAction)="onCellAction($event)"
+    >
+      <ng-template #toolbar>
+        <div class="flex">
+          <p-splitbutton
+            label="Insert"
+            icon="icon icon-plus"
+            class="w-30 h-9.3"
+            [model]="insertMenuItems"
+            (onClick)="addNewRecord()"
+          />
+          <p-divider layout="vertical" class="before:h-7! before:mt-1" />
+        </div>
+      </ng-template>
+    </spreadsheet>
+  }
 }
