--- a/client/src/app/features/base/table/components/column-editor/column-editor-drawer.component.html
+++ b/client/src/app/features/base/table/components/column-editor/column-editor-drawer.component.html
@@ -2,8 +2,8 @@
   <div class="flex flex-col gap-1">
     <label class="text-sm">Options</label>
     <div class="flex flex-col gap-2">
-      @for (option of options(); track $index; let idx = $index) {
-        <div class="flex">
+      @for (option of columnFormData.options; track $index; let idx = $index) {
+        <div class="flex gap-1">
           <input
             pInputText
             [pAutoFocus]="true"
