--- a/client/src/app/features/base/table/components/column-editor/column-editor-drawer.component.html
+++ b/client/src/app/features/base/table/components/column-editor/column-editor-drawer.component.html
@@ -80,7 +80,7 @@
                   #name="ngModel"
                   placeholder="Input here..."
                   required
-                  pattern="[a-zA-Z_][a-zA-Z0-9_$ ]*"
+                  pattern="^[a-zA-Z_][a-zA-Z0-9_]*$"
                 />
                 @if (name.invalid && (name.touched || columnForm.submitted)) {
                   <p-message severity="error" size="small" variant="simple">
@@ -92,7 +92,7 @@
                   </p-message>
                 }
                 <p class="text-surface-500 text-xs">
-                  Only letters, numbers, space, _, $ allowed and must start with a letter or _.
+                  Only letters, numbers, and _ allowed. Must start with a letter or _.
                 </p>
               </div>
               <div class="flex flex-col gap-1">
@@ -104,6 +104,7 @@
                   rows="5"
                   class="col-span-2"
                   placeholder="Input here..."
+                  maxlength="500"
                 ></textarea>
               </div>
             </div>
