refactor: enhance input handling and display logic in spreadsheet field cells
- Updated field cell components to improve rendering logic based on input state.
- Added checks for undefined or null data before displaying content in email, geo-point, json, long-text, reference, text, and url cells.
- Ensured that input boxes are displayed correctly when editing is active, maintaining a consistent user experience across different field types.
- Refactored the table detail component to merge updated record data with existing row data during updates.

--- a/client/src/app/shared/spreadsheet/components/field-cell/text/cell.component.html
+++ b/client/src/app/shared/spreadsheet/components/field-cell/text/cell.component.html
@@ -1,4 +1,10 @@
-@if (isInputting) {
+@if (!isInputting) {
+  @if (data !== undefined && data !== null) {
+    <div class="field-cell__text-content">
+      {{ data }}
+    </div>
+  }
+} @else {
   <input-box
     type="text"
     [content]="data"
@@ -8,8 +14,4 @@
     (blur)="onInputBoxBlur($event)"
     (contentChange)="onInputBoxChange($event)"
   />
-} @else {
-  <div class="field-cell__text-content">
-    {{ data }}
-  </div>
 }
