--- a/client/src/app/shared/spreadsheet/components/field-cell/json/cell.component.html
+++ b/client/src/app/shared/spreadsheet/components/field-cell/json/cell.component.html
@@ -1,18 +1,10 @@
-@if (isInputting) {
-  <input-box
-    type="text"
-    [content]="jsonText"
-    (edited)="onInputBoxEdited($event)"
-    (input)="onInputBoxInput($event)"
-    (focus)="onInputBoxFocus($event)"
-    (blur)="onInputBoxBlur($event)"
-    (contentChange)="onInputBoxChange($event)"
-  />
-} @else {
+@if (!isInputting) {
   <div class="flex items-start justify-between w-full">
-    <div class="field-cell__text-content">
-      {{ jsonText }}
-    </div>
+    @if (data !== undefined && data !== null) {
+      <div class="field-cell__text-content">
+        {{ jsonText }}
+      </div>
+    }
     @if (selecting) {
       <json-editor-drawer
         [(visible)]="visibleJSONEditor"
@@ -27,4 +19,14 @@
       </div>
     }
   </div>
+} @else {
+  <input-box
+    type="text"
+    [content]="jsonText"
+    (edited)="onInputBoxEdited($event)"
+    (input)="onInputBoxInput($event)"
+    (focus)="onInputBoxFocus($event)"
+    (blur)="onInputBoxBlur($event)"
+    (contentChange)="onInputBoxChange($event)"
+  />
 }
