--- a/client/src/app/shared/spreadsheet/components/field-cell/select/cell.component.html
+++ b/client/src/app/shared/spreadsheet/components/field-cell/select/cell.component.html
@@ -1,15 +1,24 @@
-@if (data !== undefined && data !== null) {
-  <div class="field-cell__block-content">
-    <p-tag severity="secondary" [value]="data"></p-tag>
-  </div>
-}
-@if (selecting && !readonly) {
-  <p-menu
-    #menu
-    [model]="items"
-    appendTo="body"
-    [popup]="true"
-    (onShow)="onMenuOpen()"
-    (onHide)="onMenuClose()"
-  />
-}
+<div class="flex items-start justify-between w-full">
+  @if (data !== undefined && data !== null) {
+    <div class="field-cell__block-content">
+      <p-tag severity="secondary" [value]="data"></p-tag>
+    </div>
+  }
+  @if (selecting) {
+    @if (!readonly) {
+      <p-menu
+        #menu
+        [model]="items"
+        appendTo="body"
+        [popup]="true"
+        (onShow)="onMenuOpen()"
+        (onHide)="onMenuClose()"
+      />
+    }
+    <div
+      class="hover:bg-surface-50 text-surface-500 cursor-pointer w-5 h-5 rounded-md flex items-center justify-center"
+    >
+      <i class="icon icon-chevron-down"></i>
+    </div>
+  }
+</div>
