--- a/client/src/app/shared/spreadsheet/components/field-cell/reference/cell.component.html
+++ b/client/src/app/shared/spreadsheet/components/field-cell/reference/cell.component.html
@@ -1,5 +1,5 @@
 @if (!isInputting) {
-  <div class="flex items-start justify-between w-full">
+  <div class="flex items-start justify-between w-full gap-1">
     @if (data !== undefined && data !== null) {
       @if (displayLabel !== data) {
         <div class="field-cell__block-content">
