--- a/client/src/app/shared/spreadsheet/components/field-cell/multi-select/cell.component.html
+++ b/client/src/app/shared/spreadsheet/components/field-cell/multi-select/cell.component.html
@@ -1,4 +1,4 @@
-<div class="flex items-start justify-between w-full">
+<div class="flex items-start justify-between w-full gap-1">
   @if (data !== undefined && data !== null) {
     <div class="field-cell__block-content">
       @for (option of parsedData; track option) {
