feat: enhance component configurations and user prompts
- Added standalone configuration for Angular pipes to improve modularity.
- Updated HTML templates for confirmation dialogs and toast notifications to include `appendTo="body"` for better positioning.
- Refined confirmation messages in various components for clarity and consistency, ensuring users are prompted with clear actions before deletion.

--- a/client/src/app/features/api-keys/api-key-manangement/api-key-management.component.html
+++ b/client/src/app/features/api-keys/api-key-manangement/api-key-management.component.html
@@ -1,5 +1,5 @@
-<p-toast></p-toast>
-<p-confirmDialog></p-confirmDialog>
+<p-toast appendTo="body" />
+<p-confirmdialog styleClass="max-w-100" appendTo="body" />
 
 <p-drawer
   [(visible)]="isCreationMode"
