--- a/client/src/app/features/base/table/pages/table-list/table-list.component.html
+++ b/client/src/app/features/base/table/pages/table-list/table-list.component.html
@@ -1,4 +1,4 @@
-<p-confirmdialog>
+<p-confirmdialog appendTo="body">
   <ng-template #message let-message>
     <div class="flex flex-col gap-4">
       <div>{{ message.message }}</div>
