--- a/client/src/app/shared/file/file-list/file-list.component.html
+++ b/client/src/app/shared/file/file-list/file-list.component.html
@@ -22,7 +22,7 @@
   }
 </div>
 
-<p-confirmDialog styleClass="max-w-100" />
+<p-confirmdialog styleClass="max-w-100" appendTo="body" />
 
 <p-dialog
   [(visible)]="visibleGalleriaDialog"
