--- a/client/src/app/shared/spreadsheet/spreadsheet.component.html
+++ b/client/src/app/shared/spreadsheet/spreadsheet.component.html
@@ -1,5 +1,5 @@
 <p-toast appendTo="body" />
-<p-confirmdialog appendTo="body" />
+<p-confirmdialog styleClass="max-w-100" appendTo="body" />
 <p-menu #menu [model]="menuItems" [popup]="true" appendTo="body" />
 <p-contextmenu #contextMenu [model]="menuItems" appendTo="body" />
 <p-overlay
