feat: enhance select and column editor components with checkmark and clear options
- Added `[checkmark]="true"` and `[showClear]="true"` attributes to select components in both the column editor and shared field editor for improved user experience.
- These enhancements allow users to easily identify selected options and clear their selections when needed.

--- a/client/src/app/features/base/table/components/column-editor/column-editor-drawer.component.html
+++ b/client/src/app/features/base/table/components/column-editor/column-editor-drawer.component.html
@@ -108,6 +108,8 @@
                 (ngModelChange)="onDataTypeSelect($event)"
                 placeholder="Select here..."
                 required
+                [checkmark]="true"
+                [showClear]="true"
               >
                 <ng-template let-item #item>
                   <div class="flex items-center gap-2">
@@ -263,6 +265,8 @@
                     optionValue="value"
                     placeholder="Select here..."
                     required
+                    [checkmark]="true"
+                    [showClear]="true"
                   />
                 </div>
                 <div class="flex flex-col gap-1">
