feat: update placeholders and enhance multi-select options
- Updated placeholder text across various editor components for improved clarity, including date, integer, number, reference, and select editors.
- Enhanced the multi-select editor to include a clear option for better user experience.

--- a/client/src/app/features/base/table/components/column-editor/column-editor-drawer.component.html
+++ b/client/src/app/features/base/table/components/column-editor/column-editor-drawer.component.html
@@ -250,7 +250,7 @@
                     placeholder="Input here..."
                   />
                   <p class="text-surface-500 text-xs">
-                    Comma separated. Leave blank to allow all domains.
+                    Comma separated. Leave blank to allow all domains. E.g. example.com, test.com
                   </p>
                 </div>
               }
