--- a/client/src/app/shared/field-system/editors/date/editor.component.html
+++ b/client/src/app/shared/field-system/editors/date/editor.component.html
@@ -23,7 +23,7 @@
     [maxDate]="field().maxDate"
     [invalid]="input.invalid && input.touched"
     [inputId]="fieldName"
-    [placeholder]="placeholder() ?? 'Input here...'"
+    [placeholder]="placeholder() ?? 'Select date and time'"
     [pAutoFocus]="autoFocus()"
     [readonlyInput]="viewOnly()"
     [disabled]="viewOnly()"
