--- a/client/src/app/shared/field-system/editors/reference/editor.component.html
+++ b/client/src/app/shared/field-system/editors/reference/editor.component.html
@@ -31,7 +31,7 @@
       [required]="field().required"
       [invalid]="input.invalid && input.touched"
       [id]="fieldName"
-      [placeholder]="placeholder() ?? 'Input here...'"
+      [placeholder]="placeholder() ?? 'Input identifier... or pick from list'"
       [pAutoFocus]="autoFocus()"
       [readonly]="viewOnly()"
       [ngModel]="isFocused ? value : displayLabel"
