--- a/client/src/app/shared/field-system/editors/select/editor.component.html
+++ b/client/src/app/shared/field-system/editors/select/editor.component.html
@@ -21,7 +21,7 @@
     [required]="field().required"
     [invalid]="input.invalid && input.touched"
     [inputId]="fieldName"
-    [placeholder]="placeholder() ?? 'Select here...'"
+    [placeholder]="placeholder() ?? 'Select options'"
     [pAutoFocus]="autoFocus()"
     [readonly]="viewOnly()"
     [(ngModel)]="data"
